<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/map"
        android:icon="@drawable/map_icon"
        android:title="Map" />
    <item
        android:id="@+id/restaurant"
        android:icon="@drawable/resaturant_icon"
        android:title="Restaurant" />
    <item
        android:id="@+id/user_profile"
        android:icon="@drawable/user_icon"
        android:title="Profile" />


</menu>