...
            android:padding="@dimen/profile_padding"
            android:text="Name:"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size" />

        <TextView
            android:id="@+id/profile_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_profile"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin_top_profile"
            android:layout_toRightOf="@id/profile_full_name_title"
...
            android:padding="@dimen/profile_padding"
            android:text="Full Name"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_text_size" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_full_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/muli_extralight"
            android:padding="@dimen/profile_padding"
...
