<resources>
    <string name="app_name">AAD Project</string>
    <string name="login">Login</string>
    <string name="enter_email_text">Email</string>
    <string name="enter_password_text">Password</string>
    <string name="create_account_text">Create Account</string>
    <string name="enter_full_name_text">Full Name</string>
    <string name="register">Register</string>
    <string name="GOOGLEAPIKEY">AIzaSyBEXnUxHd8o16Mz-DB6TmLZpmyAGnWvlK0</string>
</resources>
