<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_colour"
    android:padding="@dimen/layout_activity_padding"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/create_account_text"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/enter_full_name"
            android:layout_width="@dimen/text_box_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:drawableStart="@drawable/edit_icon"
            android:drawablePadding="10dp"
            android:hint="@string/enter_full_name_text"
            android:inputType="text"
            android:padding="@dimen/text_box_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="@dimen/text_box_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/white"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:hint="@string/enter_email_text"
            android:inputType="textEmailAddress"
            android:padding="@dimen/text_box_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="@dimen/text_box_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/white"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10dp"
            android:hint="@string/enter_password_text"
            android:inputType="textPassword"
            android:padding="@dimen/text_box_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:fontFamily="@font/muli_black"
            android:onClick="onCreateAccountClick"
            android:text="@string/register"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_page_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/white_transparent"
            android:fontFamily="@font/muli_black"
            android:onClick="onShiftToLoginClick"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>